<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="浏览设置">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/load_pic_swipe"
            android:summary="使图片在滑动列表的同时进行加载,开启此选项会消耗较多内存和流量,造成卡顿,建议低配置的设备关闭此选项"
            android:title="滑动列表时加载图片" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/click_to_back"
            android:title="大图页面单击返回" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/auto_gif_play"
            android:summary="默认关闭,选项关闭时,仅在浏览大图时加载GIF动图,以节省流量和内存,当然如果想在浏览列表的时候就直接播放动图,打开此选项即可.(如果站点没有提供GIF预览图,此选项无效)"
            android:title="浏览列表时自动加载GIF" />
    </PreferenceCategory>
    <PreferenceCategory android:title="分享设置">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/share_model"
            android:summary="默认关闭,关闭状态下在应用中点击分享只分享图片链接,开启后在应用中点击分享会保存图片并直接分享原图"
            android:title="直接分享原图" />
    </PreferenceCategory>
    <PreferenceCategory android:title="缓存设置">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/hide_pic"
            android:summary="通过建立.nomedia文件阻止图库类应用扫描，并不是真正对图片文件本身进行隐藏，所以这对一些不遵守Android建议的应用不起作用"
            android:title="隐藏下载的图片" />
        <EditTextPreference
            android:enabled="false"
            android:key="@string/download_path"
            android:title="默认下载地址" />
        <EditTextPreference
            android:enabled="false"
            android:key="@string/cache_size"
            android:title="已缓存大小" />
    </PreferenceCategory>
</PreferenceScreen>