<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="简介"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abou_easy"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="作者"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/about_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|email"
                    android:text="@string/about_author"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="捐赠"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/about_donate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|email"
                    android:text="@string/about_donate"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/alipay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_alipay"
                    android:textAlignment="center"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="开源"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/about_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|email"
                    android:text="@string/about_open"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>